[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
authors = [{ name = "Yury Gorishniy" }]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["numpy >=1.18,<2", "torch >=1.8,<3"]
optional-dependencies = { tabular = [
    "scikit-learn >=1.0,<2",
    "scipy >=1.0,<2",
] }
dynamic = ["version", "description"]
keywords = [
    "artificial intelligence",
    "deep learning",
    "library",
    "python",
    "pytorch",
    "torch",
]
license = { file = "LICENSE" }
name = "delu"
requires-python = ">=3.8"
urls = { Documentation = "https://yura52.github.io/delu", Code = "https://github.com/Yura52/delu" }

[tool.black]
skip_string_normalization = true

[tool.coverage.run]
branch = true
omit = ["delu/tests/*"]
source = ["delu"]

[tool.flit.module]
name = "delu"

[tool.isort]
profile = "black"
multi_line_output = 3
known_first_party = ["rtdl"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "delu.*.tests.*"
ignore_errors = true

[tool.ruff]
line-length = 88
extend-select = ["RUF", "UP", "E501", "E731"]
target-version = "py38"
